k8sconfigs/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server 
    spec:
      containers:
        - name: server
          image: shaklurahmed/firstbuild
          ports:
          - containerPort: 5000
          - name: REDIS_HOST
            value: redis-cluster-ip-service
          - name: REDIS_PORT
            value: '6379'
          - name: PGUSER
            value: postgres
          - name: PGHOST
            value: postgres-cluster-ip-service
          - name: PGPORT
            value: '5432'
          - name: PGDATABASE
            value: postgres
          - name: PGPASSWORD
            valueFrom:
              secretKeyRef:
                name: pgcreds
                key: PGPASSWORD
